src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_class_field_oubli_pointvirgule.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 12 : Erreur (expected ";" before "}")
//    
//
// Historique:
//    cree le 04/01/2023

class iden3{
    protected int x = 654
}